# dfg-gameplay

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
client/: CMakeLists.txt
client/cmake/: android.toolchain.cmake
client/scripts/: build-icu_51.2.bat  compile.sh  curl_ios.sh  curl_ios_arm64.sh  curl_ios_x86_64.sh  icu_android_arm.sh  icu_android_x86.sh  icu_ios_arm64.sh  icu_ios_armv7.sh  icu_ios_i386.sh  icu_ios_x86_64.sh  icu_mac_i386.sh  icu_mac_x86_64.sh
client/source/: CMakeLists.txt  dfg_include.h  pch.cpp  pch.h
client/source/_android/extras/market_apk_expansion/: source.properties
client/source/_android/extras/market_apk_expansion/downloader_library/: project.properties
client/source/_android/extras/market_apk_expansion/downloader_library/src/com/google/android/vending/expansion/downloader/: DownloaderClientMarshaller.java
client/source/_android/extras/market_apk_expansion/downloader_library/src/com/google/android/vending/expansion/downloader/impl/: CustomNotificationFactory.java  DownloadNotification.java  DownloadThread.java  DownloaderService.java
client/source/_android/extras/market_apk_expansion/zip_file/: project.properties
client/source/_android/extras/market_apk_expansion/zip_file/src/com/android/vending/expansion/zipfile/: APEZProvider.java
client/source/_android/extras/market_licensing/: source.properties
client/source/_android/jni/: Android.mk  Application.mk
client/source/_android/src/com/dreamfarmgames/util/: BillingDataSource.java  DFGActivity.java  IabBroadcastReceiver.java  IabException.java  IabHelper.java  IabResult.java  Inventory.java  Purchase.java  Security.java  SingleMediatorLiveEvent.java  SkuDetails.java  TextViewActivity.java
client/source/_msvc/: .gitignore  common.props  debug.props  dfg-gameplay.sln  dfg-gameplay.vcxproj  dfg-gameplay.vcxproj.filters  release.props
client/source/_xcode/dfg-gameplay.xcodeproj/: project.pbxproj
client/source/_xcode/dfg-gameplay.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
client/source/_xcode/dfg-gameplay.xcodeproj/xcshareddata/xcschemes/: dfg-gameplay-ios.xcscheme
client/source/base/: game_advanced.cpp  game_advanced.h  main.cpp  main.h  main.js
client/source/base/ads/: ad_provider.h  android_ad_callbacks.cpp  android_ad_provider.cpp  android_ad_provider.h  ios_admob_provider.h  ios_admob_provider.mm  ios_unityads_provider.h  ios_unityads_provider.mm  ios_yandexads_provider.h  ios_yandexads_provider.mm  ios_yandexads_provider_ios12.mm
client/source/base/entity/: entity.cpp  entity.h  entity.inl  entity_manager.cpp  entity_manager.h  entity_manager.inl
client/source/base/main/: archive.cpp  archive.h  archive.inl  asset.cpp  asset.h  cache.h  dictionary.cpp  dictionary.h  gameplay_assets.cpp  gameplay_assets.h  idb_stream.cpp  idb_stream.h  memory_stream.cpp  memory_stream.h  settings.cpp  settings.h  settings.inl  socket_stream.cpp  socket_stream.h  variant.cpp  variant.h  variant.inl  zip_package.cpp  zip_package.h  zip_packages.cpp  zip_packages.h  zip_stream.cpp  zip_stream.h
client/source/base/math/: transformable.cpp  transformable.h
client/source/base/render/: mem_fn_render_click.h  particle_system.cpp  particle_system.h
client/source/base/services/: ad_service.cpp  ad_service.h  debug_service.cpp  debug_service.h  httprequest_service.cpp  httprequest_service.h  httprequest_service.js  input_service.cpp  input_service.h  render_service.cpp  render_service.h  service.cpp  service.h  service_manager.cpp  service_manager.h  signals.h  social_service.cpp  social_service.h  storefront_service.cpp  storefront_service.h  taskqueue_service.cpp  taskqueue_service.h  taskscheduler_service.cpp  taskscheduler_service.h  tracker_service.cpp  tracker_service.h
client/source/base/ui/: carousel.cpp  carousel.h  clip_label.cpp  clip_label.h  control_event_handler.cpp  control_event_handler.h  dial_button.cpp  dial_button.h  expanded_tab.cpp  expanded_tab.h  http_image_control.cpp  http_image_control.h  slide_menu.cpp  slide_menu.h  slide_menu.inl  ui_utils.cpp  ui_utils.h
client/source/base/utils/: curve.h  intrusive_list.h  intrusive_list.inl  noncopyable.h  priority_signal.h  profiler.cpp  profiler.h  ref_ptr.h  run_on_change.cpp  run_on_change.h  singleton.cpp  singleton.h  throttle.h  utils.cpp  utils.h  utils.inl
client/source/base/utils/utf8/: checked.h  unchecked.h
client/source/iRate/: iRate.h  iRate.m
client/source/uuidlib/: uuidP.h
client/source/vendor_ios12/GoogleMobileAds/: GADAppOpenAd.h  GADBannerView.h  GADInterstitialAd.h  GADNativeAd.h  GADRequest.h  GADRewardedAd.h  GADRewardedInterstitialAd.h
client/source/vendor_ios12/UnityAds/: GMAAdMetaData.h  UADSAdFormat.h  UADSBannerLoadOptions.h  UADSGMAScarAdsBridge.h  UADSGMAScarSignalsBridge.h  UADSGMAScarVersionBridge.h  UADSGenericCompletion.h  UADSGenericError.h  UADSScarSignalParameters.h  UADSWebViewEventSender.h  USRVJsonStorage.h  USRVStorage.h  USRVStorageManager.h  UnityAds-Swift.h  UnityAds.h  UnityServices.h
client/source/vendor_ios12/YandexMobileAds/: YMAAdRequest.h  YMAAdSize.h  YMAAudioSessionManager.h  YMABidderTokenLoader.h  YMAGender.h  YMAImpressionData.h  YMAInterstitialAd.h  YMANativeAd.h  YMANativeAdErrors.h  YMANativeAdLoader.h  YMANativeAdRequestConfiguration.h  YMANativeAdType.h  YMANativeAdVideoController.h  YMANativeAdVideoControllerProvider.h  YMANativeAdView.h  YMANativeAssetsAppearance.h  YMANativeBulkAdLoader.h  YMANativeVideoPlaybackControls.h  YMANativeVideoPlaybackMuteControl.h  YMANativeVideoPlaybackProgressControl.h  YMAReward.h  YMAVersion.h  YMAVideoController.h  YandexMobileAds-umbrella.h
